--- a/demo.html
+++ b/demo.html
@@ -19,8 +19,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
-    <script src="https://unpkg.com/equation-editor-cah/js/editor.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/equation-editor-cah/css/editor.min.css">
+    <script src="https://unpkg.com/equation-editor-cah@latest/js/editor.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/equation-editor-cah@latest/css/editor.min.css">
 </head>
 
 <body>
