Added degree-radian option along with button

--- a/demo.html
+++ b/demo.html
@@ -42,6 +42,7 @@
             initializeWithLastValue: true,
             validOnly: true,
             bigDialog: true,
+            //degreeRadianMode: "radian",
             //parenthesis: "keep",
             //implicit: "show",
             //simplifyOutput: true,
