--- a/demo.html
+++ b/demo.html
@@ -42,13 +42,13 @@
             initializeWithLastValue: true,
             validOnly: true,
             bigDialog: true,
-            //degreeRadianMode: "radian",
+            degreeRadianMode: "degree",
             //parenthesis: "keep",
             //implicit: "show",
             //simplifyOutput: true,
             //operatorButtonTextColor: "red"
             //buttonImages: {xSquareImg: "img/xSquare3.png"}
-            buttonImages: { xSquareImg: "Sqr", squareRootImg: "Sqrt", xToPowYImg: "x^y" }
+            //buttonImages: { xSquareImg: "Sqr", squareRootImg: "Sqrt", xToPowYImg: "x^y" }
         };
         //Create a second equation editor that will be trigger when a clickable html element with id 'test2' is clicked.
         new EquationEditor("test2", options);
